// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Containers PageExternal Buttons ButtonContainerSecond shallow renders correctly and button works, with disabled false 1`] = `
<ButtonSecond
  disabled={false}
  handleClick={[Function]}
  text="Sign Up"
  width={300}
/>
`;

exports[`Containers PageExternal Buttons ButtonContainerSecond shallow renders correctly, with disabled true 1`] = `
<ButtonSecond
  disabled={true}
  handleClick={[Function]}
  text="Sign Up"
  width={300}
/>
`;
